src/components/About.module.css
.about {
    height: 30rem;
    width: 100%;
    padding: 2rem;
    display: flex;
    flex-direction: row;
    align-content: center;
    align-items: center;
    justify-content: space-around;
    gap: 1.5rem;
    background-color: var(--primary-bg-color);
    box-shadow: var(--background-shadow);

    @media only screen and (max-width: 768px) {
        flex-direction: column-reverse;
    }

    /* Semi-wonky line height adjustment. */
    h1, h2, h3, h4, h5, h6 {
        line-height: 36px;
    }

    .highlight {
        color: var(--primary-accent-color);
    }

    .textWrapper {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 0.25rem;
    }

    .buttonWrapper {
        margin-top: 0.75rem;
        display: flex;
        justify-content: center;
        gap: 1rem;

        .button {
            padding: 0.5rem;
            border: 1px solid var(--border-color);
            border-radius: var(--border-radius);
            background-color: var(--primary-bg-color);
            color: var(--primary-text-color);
            box-shadow: var(--background-shadow);
            text-decoration: none;
            transition: all 250ms;

            &:hover {
                background-color: var(--secondary-accent-color);
                transform: scale(1.05);
            }
        }
    }

    img {
        height: 90%;
        border-radius: var(--border-radius);
        box-shadow: var(--background-shadow);
        transition: all 250ms;

        &:hover {
            transform: scale(1.05);
        }
    }
}

